--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "vim-plugins/vim-jsx"]
 	path = vim-plugins/vim-jsx
 	url = https://github.com/mxw/vim-jsx.git
+[submodule "vim-plugins/vim-fugitive"]
+	path = vim-plugins/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive.git
