--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "vim-plugins/vim-fugitive"]
 	path = vim-plugins/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
+[submodule "vim-plugins/vim-colors-solarized"]
+	path = vim-plugins/vim-colors-solarized
+	url = git://github.com/altercation/vim-colors-solarized.git
