--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -21,8 +21,9 @@
   - git clone https://github.com/VundleVim/Vundle.vim.git ~/.vim/bundle/Vundle.vim
   - vim +PluginInstall +qall
   # zsh plugins
-  - rm -rf ~/.antigen.zsh
-  - curl -L git.io/antigen > ~/.antigen.zsh
+  - rm -rf ~/.antigen.zsh ~/antigen.zsh ~/.antigen
+  - mkdir ~/.antigen
+  - curl -L git.io/antigen > ~/.antigen/antigen.zsh
   # git config
   - git config --global core.excludesfile '~/.dotfiles/git/gitignore'
   - git config --global core.attributesfile '~/.dotfiles/git/gitattributes'
