zsh: Update aliases and env setup
Add aliases for git, gdb and also for working with my llvm setup.
Add llvm-helpers and setenv.sh.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,6 +9,8 @@
     ~/.vimrc: vimrc
     ~/.zshrc: zshrc
     ~/.bin: bin
+    ~/.setenv.sh: setenv.sh
+    ~/.llvm-helpers: llvm-helpers
 
 - shell:
   # Powerline
